// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить дату без количества происмотров, если нет данных 1`] = `
<div
  className="OfferAmpDatesAndStats"
>
  <div
    className="OfferAmpDatesAndStats__item OfferAmpDatesAndStats__item_creationDate"
    key="creation_date"
    title="Дата размещения объявления 11 апреля"
  >
    11 апреля
  </div>
</div>
`;

exports[`должен отрендерить дату и количество происмотров, если есть данные 1`] = `
<div
  className="OfferAmpDatesAndStats"
>
  <div
    className="OfferAmpDatesAndStats__item OfferAmpDatesAndStats__item_creationDate"
    key="creation_date"
    title="Дата размещения объявления 11 апреля"
  >
    11 апреля
  </div>
  <div
    className="OfferAmpDatesAndStats__item OfferAmpDatesAndStats__item_views"
    key="views"
    title="Количество просмотров"
  >
    <AmpIcon
      id="svgID"
      size="16"
    />
    <span>
      20 (10 сегодня)
    </span>
  </div>
</div>
`;
